--- a/settings.html
+++ b/settings.html
@@ -11,31 +11,41 @@
     }
 
     /* 文件选择框 */
-    .transitio input[type="file"] {
-        border-color: var(--fill_standard_primary);
-        border-style: dashed;
-        border-radius: 0.5em;
-        padding: 0.5em;
-        transition: border-color 0.2s ease-in-out;
-
-        &:focus,
-        &:hover {
-            border: dashed var(--text_secondary) !important;
+    .transitio input {
+        &[type="number"] {
+            border: 1px solid gray;
+            border-radius: 0.5em;
+            padding-left: 0.5em;
         }
-
-        &::file-selector-button {
-            background-color: transparent;
-            border-radius: 8px;
-            color: var(--text_primary);
-            border: 1px solid;
+        &[type="file"] {
             border-color: var(--fill_standard_primary);
-            height: 2em;
-            transition: background-color 0.2s ease-in-out;
+            border-style: dashed;
+            border-radius: 0.5em;
+            padding: 0.5em;
+            transition: border-color 0.2s ease-in-out;
 
+            &:focus,
+            &:hover {
+                border: dashed var(--text_secondary) !important;
+            }
+
+            &::file-selector-button {
+                background-color: transparent;
+                border-radius: 8px;
+                color: var(--text_primary);
+                border: 1px solid;
+                border-color: var(--fill_standard_primary);
+                height: 2em;
+                transition: background-color 0.2s ease-in-out;
+
+            }
+
+            &::file-selector-button:hover {
+                background-color: var(--overlay_hover);
+            }
         }
-
-        &::file-selector-button:hover {
-            background-color: var(--overlay_hover);
+        &:invalid {
+            border-color: red;
         }
     }
 
