Better indicator for disabled; `@homepageURL`

--- a/settings.html
+++ b/settings.html
@@ -137,6 +137,7 @@
                 }
 
                 &[disabled] {
+                    opacity: 0.3;
                     cursor: not-allowed;
                 }
             }
