--- a/settings.html
+++ b/settings.html
@@ -44,6 +44,9 @@
                 background-color: var(--overlay_hover);
             }
         }
+        &[type="checkbox"] {
+            appearance: auto;
+        }
         &:invalid {
             border-color: red;
         }
