--- a/settings.html
+++ b/settings.html
@@ -12,10 +12,16 @@
 
     /* 文件选择框 */
     .transitio input {
-        &[type="number"] {
+        &[type="number"], &[type="search"] {
             border: 1px solid gray;
             border-radius: 0.5em;
             padding-left: 0.5em;
+        }
+        &#transitio-search {
+            float: right;
+            padding-top: 0.1em;
+            padding-bottom: 0.1em;
+            scroll-margin-top: 3em; /* Prevent overlapping with logo */
         }
         &[type="file"] {
             border-color: var(--fill_standard_primary);
@@ -58,27 +64,28 @@
             list-style: none;
             outline: none;
         }
-
         > setting-item {
             padding-left: 1em;
         }
-
-        &.is-loading {
+        &.is-loading { /* Loading snippets */
             cursor: progress;
             opacity: 0.6;
-
             > * {
                 pointer-events: none;
             }
         }
-
-        &[data-deleted] {
+        &[data-deleted] { /* Deleted snippets */
             cursor: not-allowed;
             filter: grayscale(1);
             opacity: 0.6;
-
             > * {
                 pointer-events: none;
+            }
+        }
+        &[data-search-hidden] { /* Hidden by search */
+            display: none;
+            + setting-divider { /* Hide divider */
+                display: none;
             }
         }
     }
@@ -93,7 +100,6 @@
         background-size: 3em;
         background-position: center;
         transition: background 0.2s ease-in-out;
-
         &:hover {
             background-size: 2em;
             background-position: left;
@@ -106,7 +112,6 @@
         width: fit-content;
         margin: auto;
         transition: color 0.2s ease-in-out;
-
         &:hover {
             color: var(--brand_standard);
         }
@@ -133,19 +138,16 @@
         > summary {
             &:hover .transitio-more {
                 opacity: 0.6;
-
                 &:not([disabled]):hover {
                     scale: 1.2;
                     opacity: 1;
                 }
-
                 &[disabled] {
                     opacity: 0.3;
                     cursor: not-allowed;
                 }
             }
         }
-
         &[open] > summary .transitio-more.transitio-configure {
             scale: 1.2;
             transform: rotate(180deg);
@@ -164,12 +166,10 @@
         opacity: 0;
         transition: opacity 0.2s ease-in-out;
         background: none !important;
-
         &:hover {
             opacity: 1;
             animation: 4s magic 0.2s;
         }
-
     }
 
     /* Easter egg */
@@ -217,6 +217,7 @@
         </setting-list>
     </setting-panel>
 </setting-section>
+<input autofocus type="search" id="transitio-search" title="键入内容以搜索..." placeholder="🔍 Search...">
 <setting-section data-title="CSS 片段列表" class="snippets">
     <setting-panel>
         <setting-list data-direction="column">
