--- a/settings.html
+++ b/settings.html
@@ -63,6 +63,10 @@
         > summary {
             list-style: none;
             outline: none;
+            &::highlight(transitio-search-highlight) {
+                background-color: yellow;
+                color: black;
+            }
         }
         > setting-item {
             padding-left: 1em;
