Allow importing and loading `.styl` files

--- a/settings.html
+++ b/settings.html
@@ -228,7 +228,7 @@
                             data-transitio-url="https://github.com/PRO-2684/transitio#-用户-css-片段">用户 CSS
                             片段列表</span></setting-text>
                 </div>
-                <input id="transitio-import" type="file" accept="text/css" multiple />
+                <input id="transitio-import" type="file" accept=".css, .styl" multiple />
             </setting-item>
         </setting-list>
     </setting-panel>
