--- a/settings.html
+++ b/settings.html
@@ -42,6 +42,9 @@
             border-radius: 0.5em;
             padding-left: 0.5em;
         }
+        &[type="range"] {
+            appearance: auto;
+        }
         &#transitio-search {
             float: right;
             padding-top: 0.1em;
