--- a/settings.html
+++ b/settings.html
@@ -44,6 +44,9 @@
             border-radius: 0.5em;
             padding-left: 0.5em;
         }
+        &[type="number"] {
+            max-width: 5em;
+        }
         &[type="range"] {
             appearance: auto;
         }
