Update links of userstyle list; Update readme

--- a/settings.html
+++ b/settings.html
@@ -293,7 +293,7 @@
                     <setting-text id="transitio-reload" title="双击以立即重载样式">导入用户样式...</setting-text>
                     <setting-text data-type="secondary">导入自定义的用户样式，或查看<span class="transitio-link"
                             id="transitio-snippets" style="font-style: italic;"
-                            data-transitio-url="https://github.com/PRO-2684/transitio#-用户样式列表">用户样式列表</span></setting-text>
+                            data-transitio-url="https://pro-2684.github.io/?page=transitio_userstyles">用户样式列表</span></setting-text>
                 </div>
                 <input id="transitio-import" type="file" accept="text/css" multiple />
             </setting-item>
